--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3113,6 +3113,81 @@ Uncertainties based on
   pages = {221803}
 }
 
+@article{Ask:2011xf,
+      author         = "Ask, S. and Parker, M.A. and Sandoval, T. and Shea, M.E.
+                        and Stirling, W.J.",
+      title          = "{Using gamma+jets Production to Calibrate the Standard
+                        Model Z(nunu)+jets Background to New Physics Processes at
+                        the LHC}",
+      journal        = "JHEP",
+      volume         = "1110",
+      pages          = "058",
+      doi            = "10.1007/JHEP10(2011)058",
+      year           = "2011",
+      eprint         = "1107.2803",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CAVENDISH-HEP-11-14, MCNET-11-16",
+      SLACcitation   = "%%CITATION = ARXIV:1107.2803;%%",
+}
+
+@article{Bern:2012vx,
+      author         = "Bern, Z.a and Diana, G. and Dixon, L.J. and Febres
+                        Cordero, F. and Hoeche, S. and others",
+      title          = "{Missing Energy and Jets for Supersymmetry Searches}",
+      journal        = "Phys.Rev.",
+      number         = "3",
+      volume         = "D87",
+      pages          = "034026",
+      doi            = "10.1103/PhysRevD.87.034026",
+      year           = "2013",
+      eprint         = "1206.6064",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-15096, UCLA-12-TEP-103, CERN-PH-TH-2012-170,
+                        IPPP-11-42",
+      SLACcitation   = "%%CITATION = ARXIV:1206.6064;%%",
+}
+
+@article{Bern:2011pa,
+      author         = "Bern, Z. and Diana, G. and Dixon, L.J. and Febres
+                        Cordero, F. and Hoche, S. and others",
+      title          = "{Driving Missing Data at Next-to-Leading Order}",
+      journal        = "Phys.Rev.",
+      volume         = "D84",
+      pages          = "114002",
+      doi            = "10.1103/PhysRevD.84.114002",
+      year           = "2011",
+      eprint         = "1106.1423",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-14472, UCLA-11-TEP-106, CERN-PH-TH-2011-125,
+                        IPHT-T11-146, IPPP-11-29, NSF-KITP-11-093, SB-F-387-11,
+                        SLAC--PUB--14472, CERN--PH--TH-2011-125, --IPHT--T11-146,
+                        NSF--KITP--11--093",
+      SLACcitation   = "%%CITATION = ARXIV:1106.1423;%%",
+}
+
+@book{GVK017474957,
+  added-at = {2009-08-21T09:46:50.000+0200},
+  address = {Philadelphia, Pa.},
+  author = {Efron, {Bradley}},
+  biburl = {http://www.bibsonomy.org/bibtex/276f11f1e9f3b99751acf8558e0ef6e58/fbw_hannover},
+  interhash = {1fc06c2784126911023c0681018f1a63},
+  intrahash = {76f11f1e9f3b99751acf8558e0ef6e58},
+  isbn = {0898711797},
+  keywords = {Resampling},
+  number = 38,
+  pagetotal = {VII, 91},
+  ppn_gvk = {017474957},
+  publisher = {Society for Industrial and applied mathematics},
+  series = {Regional Conference Series in applied mathematics},
+  timestamp = {2009-08-21T09:46:50.000+0200},
+  title = {The Jackknife, the bootstrap and other resampling plans},
+  url = {http://gso.gbv.de/DB=2.1/CMD?ACT=SRCHA&SRT=YOP&IKT=1016&TRM=ppn+017474957&sourceid=fbw_bibsonomy},
+  year = 1982
+}
+
 @article{Rogan:2010kb,
       author         = "Rogan, Christopher",
       title          = "{Kinematical variables towards new dynamics at the LHC}",
