--- a/definitions.tex
+++ b/definitions.tex
@@ -224,11 +224,13 @@
 
 % Processes
 \newcommand{\ZInv}{\ensuremath{Z\rightarrow\nu\bar{\nu}}\xspace}
-\newcommand{\ZInvJets}{\ensuremath{Z\rightarrow\nu\bar{\nu}\,+\,\text{jets}}\xspace}
+%\newcommand{\ZInvJets}{\ensuremath{Z\rightarrow\nu\bar{\nu}\,+\,\text{jets}}\xspace}
+\newcommand{\ZInvJets}{\ensuremath{Z(\nu\bar{\nu})+\text{jets}}\xspace}
 \newcommand{\ttbar}{\ensuremath{t\bar{t}}\xspace}
 \newcommand{\WJets}{\ensuremath{W+\text{jets}}\xspace}
-\newcommand{\photonJet}{\ensuremath{\text{photon}+\text{jet}}\xspace}
-\newcommand{\photonJets}{\ensuremath{\text{photon}+\text{jets}}\xspace}
+%\newcommand{\photonJet}{\ensuremath{\text{photon}+\text{jet}}\xspace}
+%\newcommand{\photonJets}{\ensuremath{\text{photon}+\text{jets}}\xspace}
+\newcommand{\photonJets}{\ensuremath{\gamma+\text{jets}}\xspace}
 \newcommand{\ZJet}{\ensuremath{Z+\text{jet}}\xspace}
 \newcommand{\ZJets}{\ensuremath{Z+\text{jets}}\xspace}
 \newcommand{\photonZJet}{\ensuremath{\text{photon}/Z+\text{jet}}\xspace}
